# test-apache-orc

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
